# nori

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/: color.rs  dot_grid.rs  lib.rs
www/: index.html  index.tsx  styles.css
www/components/: App.tsx  Cursor.tsx  DotGrid.tsx
www/glsl/: bufferShader.frag  shader.frag  shader.vert
www/utilities/: numberGenerators.ts
