[package]
name = "nori"
version = "0.1.0"
authors = ["conorbyron <conor.n.byron@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wasm-bindgen = "0.2.56"
js-sys = "0.3.33"
nalgebra = "0.19.0"

[dependencies.web-sys]
version = "0.3.33"
features = ["console"]

[dependencies.rand]
version = "0.7.2"
features = ["wasm-bindgen"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.6"
futures = "0.3.1"
js-sys = "0.3.33"
wasm-bindgen-futures = "0.4.6"
